# egocentric_video_mapper

./: .gitignore  README.rst  setup.cfg
docs/: index.rst
src/pupil_labs/action_cam_mapper/: PL-mapper.ipynb  __init__.py  __main__.py  control.py  example_script.py  feature_matcher.py  gaze_mapper.py  matcher_time.ipynb  optic_flow.py  sandbox.ipynb  sync_videos.py  thsld_script.py  utils.py  video_handler.py  video_renderer.py
src/pupil_labs/egocentric_video_mapper/: PL-mapper.ipynb  PL_EgocentricVideoMapper.ipynb  __init__.py  __main__.py  feature_matcher.py  gaze_mapper.py  optic_flow.py  sync_videos.py  utils.py  video_handler.py  video_renderer.py
tests/: test_api.py
