[metadata]
name = action_cam_mapper
description = This repo contains code for converting gazes in the coordinate system of the Pupil Labs Neon eye tracker into the coordinate system of an external camera.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pupil-labs/python-module-skeleton
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
install_requires =
    importlib-metadata;python_version<"3.8"
    pupil-labs-video @ git+https://github.com/pupil-labs/pl-video@main
    numpy == 2.0.1
    matplotlib
    jupyter
    tqdm
    pyav
    opencv-python
    scipy
    pandas
    kornia @ git+https://github.com/kornia/kornia
    torch
    torchvision
    joblib
    loguru
    pytorch-lightning
    einops
    yacs



python_requires = >=3.7
include_package_data = true
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.extras_require]
docs =
    jaraco.packaging>=9
    rst.linker>=1.9
    sphinx
testing =
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.3
    pytest-mypy>=0.9.1;python_implementation != "PyPy"
